# PD15_Ishemgulov_L28

./: README.md  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  validators.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py  category.py  selection.py
ads/view/: ad.py  category.py  selection.py
authentication/: models.py  serializers.py
authentication/migrations/: 0001_initial.py
datasets/: cvs_to_json.py  location.json
hunting/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/ads/: ads_test.py
tests/selections/: selections_test.py
users/: models.py  serializers.py  url.py  views.py
users/migrations/: 0001_initial.py
